@@ -1,6 +1,9 @@
 Release 0.6.6 (in development)
 ==============================
 
+* #376: In autodoc, fix display of parameter defaults containing
+  backslashes.
+
 * #370: Fix handling of complex list item labels in LaTeX output.
 
 * #374: Make the ``doctest_path`` config value of the doctest
